// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:MapPanel displays a message when an error has occurred 1`] = `
<section
  className="map-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h2>
        Showing 
        <span>
          0
        </span>
         matches out of 
        <span>
          100
        </span>
         total complaints
      </h2>
    </div>
    <div
      className="layout-row"
    >
      <h4
        className="flex-all"
      >
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          Export results
        </button>
      </h4>
    </div>
  </summary>
  <div />
  <section
    className="date-intervals"
  >
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      6m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      1y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      All
    </button>
  </section>
  <div>
    <div
      className="cfpb-chart"
      data-chart-type="tile_map"
      id="tile-chart-map"
    />
  </div>
</section>
`;

exports[`component:MapPanel displays a message when only the narratives are stale 1`] = `
<section
  className="map-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h2>
        Showing 
        <span>
          1
        </span>
         matches out of 
        <span>
          100
        </span>
         total complaints
      </h2>
    </div>
    <div
      className="layout-row"
    >
      <h4
        className="flex-all"
      >
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          Export results
        </button>
      </h4>
    </div>
  </summary>
  <div>
    <div
      className="m-notification m-notification__visible m-notification__warning"
    >
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm-49.7 234.6c0-27.6 22.4-50 50-50s50 22.4 50 50v328.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V339.8zm50 582.5c-39.6 0-71.7-32.1-71.7-71.7s32.1-71.7 71.7-71.7S572 811 572 850.6s-32.1 71.7-71.7 71.7z"
        />
      </svg>
      <div
        className="m-notification_content"
      >
        <div
          className="h4 m-notification_message"
        >
          We’re currently experiencing technical issues that have delayed the refresh of consumer complaint narratives on the Consumer Complaint Database.  We expect to refresh the data in the next few days.
        </div>
      </div>
    </div>
  </div>
  <section
    className="date-intervals"
  >
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      6m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      1y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      All
    </button>
  </section>
  <div>
    <div
      className="cfpb-chart"
      data-chart-type="tile_map"
      id="tile-chart-map"
    />
  </div>
</section>
`;

exports[`component:MapPanel displays a message when the data has issues 1`] = `
<section
  className="map-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h2>
        Showing 
        <span>
          1
        </span>
         matches out of 
        <span>
          100
        </span>
         total complaints
      </h2>
    </div>
    <div
      className="layout-row"
    >
      <h4
        className="flex-all"
      >
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          Export results
        </button>
      </h4>
    </div>
  </summary>
  <div
    className="m-notification m-notification__visible m-notification__warning"
  >
    <svg
      className="cf-icon-svg"
      viewBox="0 0 1000 1200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm-49.7 234.6c0-27.6 22.4-50 50-50s50 22.4 50 50v328.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V339.8zm50 582.5c-39.6 0-71.7-32.1-71.7-71.7s32.1-71.7 71.7-71.7S572 811 572 850.6s-32.1 71.7-71.7 71.7z"
      />
    </svg>
    <div
      className="m-notification_content"
    >
      <div
        className="h4 m-notification_message"
      >
        We’re currently experiencing technical issues that have delayed the refresh of data on the Consumer Complaint Database.  We expect to refresh the data in the next few days.
      </div>
    </div>
  </div>
  <div />
  <section
    className="date-intervals"
  >
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      6m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      1y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      All
    </button>
  </section>
  <div>
    <div
      className="cfpb-chart"
      data-chart-type="tile_map"
      id="tile-chart-map"
    />
  </div>
</section>
`;

exports[`component:MapPanel displays a message when the data is stale 1`] = `
<section
  className="map-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h2>
        Showing 
        <span>
          1
        </span>
         matches out of 
        <span>
          100
        </span>
         total complaints
      </h2>
    </div>
    <div
      className="layout-row"
    >
      <h4
        className="flex-all"
      >
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          Export results
        </button>
      </h4>
    </div>
  </summary>
  <div>
    <div
      className="m-notification m-notification__visible m-notification__warning"
    >
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm-49.7 234.6c0-27.6 22.4-50 50-50s50 22.4 50 50v328.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V339.8zm50 582.5c-39.6 0-71.7-32.1-71.7-71.7s32.1-71.7 71.7-71.7S572 811 572 850.6s-32.1 71.7-71.7 71.7z"
        />
      </svg>
      <div
        className="m-notification_content"
      >
        <div
          className="h4 m-notification_message"
        >
          We’re currently experiencing technical issues that have delayed the refresh of data in the Consumer Complaint Database.  We expect to refresh the data in the next few days.
        </div>
      </div>
    </div>
  </div>
  <section
    className="date-intervals"
  >
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      6m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      1y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      All
    </button>
  </section>
  <div>
    <div
      className="cfpb-chart"
      data-chart-type="tile_map"
      id="tile-chart-map"
    />
  </div>
</section>
`;

exports[`component:MapPanel displays a message when there are no results 1`] = `
<section
  className="map-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h2>
        Showing 
        <span>
          0
        </span>
         matches out of 
        <span>
          100
        </span>
         total complaints
      </h2>
    </div>
    <div
      className="layout-row"
    >
      <h4
        className="flex-all"
      >
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          Export results
        </button>
      </h4>
    </div>
  </summary>
  <div />
  <section
    className="date-intervals"
  >
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      6m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      1y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      All
    </button>
  </section>
  <div>
    <div
      className="cfpb-chart"
      data-chart-type="tile_map"
      id="tile-chart-map"
    />
  </div>
</section>
`;

exports[`component:MapPanel only displays data message when both types are stale 1`] = `
<section
  className="map-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h2>
        Showing 
        <span>
          1
        </span>
         matches out of 
        <span>
          100
        </span>
         total complaints
      </h2>
    </div>
    <div
      className="layout-row"
    >
      <h4
        className="flex-all"
      >
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          Export results
        </button>
      </h4>
    </div>
  </summary>
  <div>
    <div
      className="m-notification m-notification__visible m-notification__warning"
    >
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm-49.7 234.6c0-27.6 22.4-50 50-50s50 22.4 50 50v328.6c0 27.6-22.4 50-50 50s-50-22.4-50-50V339.8zm50 582.5c-39.6 0-71.7-32.1-71.7-71.7s32.1-71.7 71.7-71.7S572 811 572 850.6s-32.1 71.7-71.7 71.7z"
        />
      </svg>
      <div
        className="m-notification_content"
      >
        <div
          className="h4 m-notification_message"
        >
          We’re currently experiencing technical issues that have delayed the refresh of data in the Consumer Complaint Database.  We expect to refresh the data in the next few days.
        </div>
      </div>
    </div>
  </div>
  <section
    className="date-intervals"
  >
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      6m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      1y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      All
    </button>
  </section>
  <div>
    <div
      className="cfpb-chart"
      data-chart-type="tile_map"
      id="tile-chart-map"
    />
  </div>
</section>
`;

exports[`component:MapPanel renders without crashing 1`] = `
<section
  className="map-panel"
>
  <summary
    className="action-bar"
  >
    <div>
      <h2>
        Showing 
        <span>
          1
        </span>
         matches out of 
        <span>
          100
        </span>
         total complaints
      </h2>
    </div>
    <div
      className="layout-row"
    >
      <h4
        className="flex-all"
      >
        <button
          className="a-btn a-btn__link"
          data-gtm_ignore="true"
          onClick={[Function]}
        >
          Export results
        </button>
      </h4>
    </div>
  </summary>
  <div />
  <section
    className="date-intervals"
  >
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      6m
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      1y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      3y
    </button>
    <button
      className="date-selector "
      onClick={[Function]}
    >
      All
    </button>
  </section>
  <div>
    <div
      className="cfpb-chart"
      data-chart-type="tile_map"
      id="tile-chart-map"
    />
  </div>
  <div>
    <h3>
      product
       by complaint volume (5 highest counts)
    </h3>
    <div
      id="rowchart-product"
    />
  </div>
  <div>
    <h3>
      issue
       by complaint volume (5 highest counts)
    </h3>
    <div
      id="rowchart-issue"
    />
  </div>
</section>
`;
